# check-no_messaging_setup-issue

./: .gitignore  .travis.yml  Makefile.am  auto-apt-pkgcdb.c  auto-apt-pkgcdb.h  auto-apt.c  auto-apt.h  configure.ac  main.c
pkgcdb/: Makefile.am  debug.h  mempool.c  mempool.h  pathnode.c  pathnode.h  pkgcdb2.c  pkgcdb2.h  pkgtab.c  pkgtab.h  strtab.c  strtab.h
src/: Makefile.am
tests/: Makefile.am  check_auto_apt.c
